@@ -954,6 +954,10 @@ void
 initsv(void)
 {
 	PyObject *m, *d;
+	
+	if (PyErr_WarnPy3k("the sv module has been removed in "
+	                   "Python 3.0", 2) < 0)
+	    return;
 
 	m = Py_InitModule("sv", sv_methods);
 	if (m == NULL)
